tests/fixtures/invalid/none_bitand_none.py
# Cannot bitwise AND None and None
x: None = None & None
